--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "fs": "0.0.1-security",
     "ms": "^2.1.2",
     "quick.hook": "^1.5.1",
     "quick.log": "^1.2.1",
