--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.5.1",
     "fs": "0.0.1-security",
     "ms": "^2.1.2",
+    "node-fetch": "^2.6.0",
     "quick.hook": "^1.5.1",
     "quick.log": "^1.2.1",
     "quick.log-discord": "^1.1.0",
