--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "discord.js": "^11.5.1",
     "discord.js-aliases": "^1.1.6",
     "enmap": "^5.1.0",
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.0",
