--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.0",
+    "number-abbreviate": "^2.0.0",
     "quick.hook": "^1.5.1",
     "quick.log": "^1.2.1",
     "quick.log-discord": "^1.1.0",
